--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,8 @@ jobs:
           token: ${{ secrets.METRICS }}
           base: header, repositories
           plugin_lines: yes
+          plugin_traffic: yes
+          plugin_languages: yes
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_limit: 4
+
